# AccountingGame-backend

./: README.md  __init__.py  api.py  const.py  data_interface.py  model.py  pyproject.toml  requirements.txt  setting.py  util.py  vercel.json
data/: Accounting Elements for Game.xlsx
