[project]
name = "AccountingGame-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SonderXiaoming", email = "1316864423@qq.com"},
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.33.0",
    "pandas>=2.0.3",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
